Changed something in every page

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,9 @@
 <div class="jumbotron">
 	<body background="http://static.tumblr.com/b9a8b073b19e26743d487849a13cda05/ctbjt08/32enm01c9/tumblr_static_5dqhgg2lxksgss4ossso088go.jpg">
-	<h1>Contact Leah Michael</h1>
-	  <p>leahmichael1996@gmail.com</p>
+	<h1>Contact Leah Michael</h1> 
+	  <a href="https://twitter.com/LEAHizzlMEdzzl" target="_blank" class="btn btn-primary btn-lg active" role="button">Twitter</a>
+	  <a href="https://www.facebook.com/katherine.l.michael" target="_blank" class="btn btn-primary btn-lg active" role="button">Facebook</a>
+	  <a href="https://instagram.com/leahmichael_/" target="_blank" class="btn btn-primary btn-lg active" role="button">Instagram</a>
+	  
 	</body>
 </div>
