Made changes to most pages.

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
 	<body background="http://static.tumblr.com/b9a8b073b19e26743d487849a13cda05/ctbjt08/32enm01c9/tumblr_static_5dqhgg2lxksgss4ossso088go.jpg">
-		<h1>About Me</h1>
-			<p>My name is Leah. 19. South Carolina native. Technology obsessed. Coder.</p>
+		<h1 align="center">About Me</h1>
+			<p align="center">none</p>
         
 	</body>
 </div>
