--- a/app/views/pages/blog.html.erb
+++ b/app/views/pages/blog.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
 	<body background="http://static.tumblr.com/b9a8b073b19e26743d487849a13cda05/ctbjt08/32enm01c9/tumblr_static_5dqhgg2lxksgss4ossso088go.jpg">
- 		<h1>Blog</h1>
- 		  <p>Coming Soon.</p>
+ 		<h1 align="center">Blog</h1>
+ 		  <p align="center">Coming Soon.</p>
 	</body>
 </div>
