--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron">
 	<body background="http://static.tumblr.com/b9a8b073b19e26743d487849a13cda05/ctbjt08/32enm01c9/tumblr_static_5dqhgg2lxksgss4ossso088go.jpg">
-	<h1>Contact Leah Michael</h1> 
+	<h1 align="center">Contact Leah Michael</h1> 
+	<img src="https://scontent-atl3-1.xx.fbcdn.net/hphotos-xpl1/v/t1.0-9/10440825_1075682565795135_3988679778197258127_n.jpg?oh=0882ae1503057f9e2eccc9fd7da48e40&oe=56BEB624" alt="" style="width:200px;height:200px;">
 	  <a href="https://twitter.com/LEAHizzlMEdzzl" target="_blank" class="btn btn-primary btn-lg active" role="button">Twitter</a>
 	  <a href="https://www.facebook.com/katherine.l.michael" target="_blank" class="btn btn-primary btn-lg active" role="button">Facebook</a>
 	  <a href="https://instagram.com/leahmichael_/" target="_blank" class="btn btn-primary btn-lg active" role="button">Instagram</a>
