--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
-
 <div class="jumbotron">
 	<body background="http://static.tumblr.com/b9a8b073b19e26743d487849a13cda05/ctbjt08/32enm01c9/tumblr_static_5dqhgg2lxksgss4ossso088go.jpg">
-		<h1>Home</h1>
-			<p>is where the heart is (el oh el)</p>
+		<h1 align="center">Home</h1>
+			<p align="center">is where the wifi is strong.</p>
 	</body>
 
 </div>
